# masked-mails

./: .dockerignore  .envrc  Cargo.toml  Dockerfile  config.toml  docker-compose.yaml
.github/workflows/: continuous-deployment.yaml  continuous-integration.yaml
cloudflare-worker/: package.json  pnpm-lock.yaml  wrangler.toml
cloudflare-worker/src/: index.ts
migrations/: .sqlfluff  1715222927_create_users.up.sql  1715403334_create_addresses_and_domains.down.sql  1715403334_create_addresses_and_domains.up.sql
src/: auth.rs  cli.rs  config.rs  database.rs  error.rs  http.rs  main.rs  tracing.rs
src/api/: auth.rs  v1.rs
src/api/v1/: address.rs  domain.rs
