[package]
name = "masked-mails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive", "env"] }
miette = { version = "7.2.0", features = ["fancy"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-full"] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.23.0", features = ["thiserror"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
