[package]
name = "masked-mails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
axum-login = "0.15.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
mail-parser = "0.9.3"
miette = { version = "7.2.0", features = ["fancy"] }
openidconnect = { version = "3.5.0", features = ["accept-rfc3339-timestamps"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
rand = "0.8.5"
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "time"] }
thiserror = "1.0.59"
time = { version = "0.3.36", features = ["serde-human-readable"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-full"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.23.0", features = ["thiserror"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.0"

[profile.release]
lto = "fat"
strip = "debuginfo"
panic = "abort"
opt-level = "z"
codegen-units = 1
